--- a/src/main/resources/main.fxml
+++ b/src/main/resources/main.fxml
@@ -26,5 +26,7 @@
     <Button fx:id="Play" layoutX="105.0" layoutY="361.0" minWidth="32.0" mnemonicParsing="false" onAction="#handleAction" opacity="0.0" prefHeight="32.0" prefWidth="32.0" text="Play" />
     <Button fx:id="Fwd" layoutX="167.0" layoutY="361.0" minWidth="32.0" mnemonicParsing="false" onAction="#handleAction" opacity="0.0" prefHeight="32.0" prefWidth="32.0" text="Forward" />
 
-    <ListView fx:id="channelList" onMousePressed="#changeChannel" layoutX="26.0" layoutY="414.0" prefHeight="303.0" prefWidth="188.0" style="-fx-background-color: #000000;" />
+    <ListView fx:id="channelList" id="channelList" layoutX="11.0" layoutY="414.0" prefHeight="293.0" prefWidth="220.0" style="-fx-background-color: transparent;" />
+   <Button fx:id="VolumeUp" layoutX="223.0" layoutY="176.0" mnemonicParsing="false" onAction="#handleAction" opacity="0.0" prefHeight="48.0" prefWidth="2.0" text="VolumeUp" />
+   <Button fx:id="VolumeDown" layoutX="223.0" layoutY="239.0" mnemonicParsing="false" onAction="#handleAction" opacity="0.0" prefHeight="48.0" prefWidth="2.0" text="VolumeDown" />
 </AnchorPane>
